# MRSpinDynamics

./: .gitattributes  .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  README.md
PythonSpinDynamics/: .gitignore  README.md  pyproject.toml
PythonSpinDynamics/benchmarks/: README.md  diffusion_high_q_validation.py  long_cpmg_workers.py
PythonSpinDynamics/docs/: generate_api_reference.py  matlab_mapping.md  migration_plan.md  nqr_module_plan.md  user_manual.tex  validation_results.md
PythonSpinDynamics/examples/: _source_path.py  compare_cpmg_fid.py  coupled_isochromat_fields.py  diagnose_optimization_backends.py  export_validation_arrays.py  finite_probe_train_sweeps.py  heteronuclear_j_editing.py  ideal_cpmg.py  ideal_cpmg_train.py  ideal_fid.py  ideal_time_varying_cpmg.py  matched_cpmg_ir_train.py  matched_cpmg_train.py  matched_diffusion_cpmg.py  plot_bipolar_pgste.py  plot_dexsy_exchange.py  plot_diffusion_sweep.py  plot_esr_deer.py  plot_esr_eseem_hyscore.py  plot_esr_inhomogeneous_echo.py  plot_esr_single_crystal.py  plot_finite_train_workflows.py  plot_glycine_piezo_detection.py  plot_halbach_dipole_field.py  plot_ideal_imaging.py  plot_ideal_workflows.py  plot_imaging_inhomogeneity.py  plot_internal_gradients.py  plot_j_editing_field_spread.py  plot_j_editing_spectrum.py  plot_motion_diffusion_cpmg.py  plot_motion_diffusion_udd.py  plot_motion_linear.py  plot_nmr_mouse_depth_profile.py  plot_nmr_mouse_fields.py  plot_nqr_efg_broadening.py  plot_nqr_polarization_enhancement.py  plot_nqr_population_transfer.py  plot_nqr_powder_nutation.py  (+32 more)
(+1088 files in other folders)
