[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-spin-dynamics"
version = "0.0.0"
description = "Python port workspace for MATLABSpinDynamics."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Soumyajit Mandal" }
]
dependencies = [
  "numpy>=1.24"
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4"
]
bench = [
  "pytest-benchmark>=4"
]
opt = [
  "scipy>=1.11"
]
plot = [
  "matplotlib>=3.7"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
